# audioadapter-rs

./: Cargo.toml  README.md
.github/workflows/: ci-test.yml  publish.yml
audioadapter/: Cargo.toml  LICENSE.txt  README.md
audioadapter-buffers/: Cargo.toml  README.md
audioadapter-buffers/src/: adapter_to_float.rs  direct.rs  dummy.rs  lib.rs  number_to_float.rs  owned.rs  slicetools.rs
audioadapter-sample/: Cargo.toml  README.md
audioadapter-sample/src/: readwrite.rs  sample.rs
audioadapter/benches/: sqrt.rs
audioadapter/examples/: custom_adapter.rs
audioadapter/src/: audio.rs  iterators.rs  lib.rs  stats.rs  traits.rs
src/: audio.rs  lib.rs  traits.rs
