[package]
name = "audioadapter-sample"
version = "2.0.1"
edition = "2021"
rust-version = "1.74"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "A library for making it easier to work with audio data"
license = "MIT"
repository = "https://github.com/HEnquist/audioadapter-sample-rs"
keywords = ["audio", "dsp", "sample", "pcm"]
categories = ["multimedia::audio"]
readme = "README.md"

[features]
default = ["std", "audio"]
std = ["num-traits/std", "audio-core?/std"]
libm = ["num-traits/libm"]
audio = ["dep:audio-core"]

[dependencies]
num-traits.workspace = true
audio-core = { workspace = true, optional = true }

